--- a/templates/predict.html
+++ b/templates/predict.html
@@ -14,7 +14,7 @@
 <div class="d-flex justify-content-center align-items-center mb-5">
   <div class="d-flex justify-content-center align-items-center"
     style="height: 50px; min-width: 350px; background-color: rgba(0, 177, 38, 0.377); border-radius: 1em;">
-    <h5> House prediction is : {{ pred_val }}</h5>
+    <h5> House prediction is: {{ pred_val }}</h5>
   </div>
 </div>
 
@@ -146,7 +146,7 @@
   </div>
   <div class="form-row justify-content-center mb-5">
     <button type="submit" class="btn btn-success"
-      style="height:50px; min-width: 350px; background-color: rgba(0, 177, 38, 0.377); border-radius: 1em">Predict</button>
+      style="height:50px; min-width: 350px; background-color: rgba(0, 177, 38, 0.377); border-radius: 1em; color: #000; font-size: 20px;">Predict</button>
   </div>
 </form>
 
